samples/_failures_safe/1761186654_96c057_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee90055b.c: In function ‘main’:
./samples/SAFE/__tmp_ee90055b.c:161:16: error: missing terminating " character
  161 |         printf("Compression ratio: %.2f
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ee90055b.c:161:9: error: expected expression at end of input
  161 |         printf("Compression ratio: %.2f
      |         ^~~~~~
./samples/SAFE/__tmp_ee90055b.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee90055b.c:161:9: error: expected declaration or statement at end of input
